syntax = "proto3";

option csharp_namespace = "gRPC.Demo.protos";
import  "google/protobuf/timestamp.proto";


message TrackingMessage {
	  int32 deviceId = 1;
	  int32 speed = 2;
	  Location  location = 3;
	  google.protobuf.Timestamp stamp = 4;
	  repeated Sensor sensors = 5; // list<Sensor>
	  
}
message Location {
      double latitude = 1;
	  double longitude = 2;
}

message TrackingResponse {
	  bool success = 1;
}
message Sensor {
	string key = 1;
	double value = 2;
}
message PulseMessage {
	int32 deviceId = 1;
	ClientStatus status = 2;
	string details = 3;
	  google.protobuf.Timestamp stamp = 4;

}

enum ClientStatus{
	Invalid = 0;
	Working = 1;
	Failed = 2;
}

message NumberRequest{
	int32 number = 1;
}

message SumResponse{
	int32 sum = 1;
}