syntax = "proto3";

option csharp_namespace = "gRPC.Demo.protos";
import "google/protobuf/empty.proto";
import "models.proto";

service TrackingService {
  rpc SendMessage (TrackingMessage) returns (TrackingResponse);
  rpc KeepAlive(stream PulseMessage) returns (google.protobuf.Empty);
  rpc GetSum(stream NumberRequest) returns (SumResponse);
}


