using Google.Protobuf.WellKnownTypes;
using gRPC.Demo.protos;
using Grpc.Core;

namespace gRPCDeviceClient
{
    public class Worker : BackgroundService
    {
        private readonly ILogger<Worker> _logger;
        private readonly int deviceId;
        private TrackingService.TrackingServiceClient _client;
        // create one client with only one tcp connection, to avoid connection exhaustion
        private TrackingService.TrackingServiceClient gRPCClient
        {
            get
            {
                if (_client == null)
                {
                    var channel = Grpc.Net.Client.GrpcChannel.ForAddress("https://localhost:7113");
                    _client = new TrackingService.TrackingServiceClient(channel);
                }
                return _client;
            }
        }
        public Worker(ILogger<Worker> logger, int deviceId)
        {
            _logger = logger;
            this.deviceId = deviceId;
            // initialize the client
            _client = gRPCClient;
        }

        protected override async Task ExecuteAsync(CancellationToken stoppingToken)
        {
            //var stream = _client.KeepAlive();
            ////await KeepAlive(stoppingToken, stream);
            //var keepAliveTask = Task.Run(async () =>
            // {
            //     while (!stoppingToken.IsCancellationRequested)
            //     {
            //         await stream.RequestStream.WriteAsync(new PulseMessage()
            //         {
            //             DeviceId = deviceId,
            //             Status = ClientStatus.Working,
            //             Stamp = Google.Protobuf.WellKnownTypes.Timestamp.FromDateTime(DateTime.UtcNow),
            //             Details = "All systems operational"
            //         }, stoppingToken);
            //         _logger.LogInformation($"Pulse sent from Device: {deviceId} at {DateTime.UtcNow}");
            //         Thread.Sleep(2000);
            //     }
            // });

            //while (!stoppingToken.IsCancellationRequested)
            //{
            //    if (_logger.IsEnabled(LogLevel.Information))
            //    {

            //        // all this code is generated by the client grpc packages from the proto file
            //        // because server and client should use the same proto file (contract)
            //        SendMessage();



            //    }
            //    await Task.Delay(1000, stoppingToken);
            //}

            await SendNumbersStream();
        }

        private async Task SendMessage()
        {
            var random = new Random();

            int GetRandomInt(int min, int max)
            {
                return random.Next(min, max + 1);
            }

            TrackingResponse response = await _client.SendMessageAsync(new TrackingMessage()
            {
                DeviceId = deviceId,
                Location = new Location()
                {
                    Latitude = GetRandomInt(-90, 90),       // Random latitude
                    Longitude = GetRandomInt(-180, 180)     // Random longitude
                },
                Sensors =
                        {
                            new Sensor()
                            {
                                Key = "Temperature",
                                Value = GetRandomInt(15, 35)       // Random temperature
                            },
                            new Sensor()
                            {
                                Key = "Humidity",
                                Value = GetRandomInt(20, 80)       // Random humidity
                            }
                        },
                Speed = GetRandomInt(0, 120),              // Random speed
                Stamp = Google.Protobuf.WellKnownTypes.Timestamp.FromDateTime(DateTime.UtcNow)
            });
            _logger.LogInformation($"Worker running at: {DateTimeOffset.Now} , Response {response.Success} ");
        }

        private async Task KeepAlive(CancellationToken stoppingToken, AsyncClientStreamingCall<PulseMessage, Empty> stream)
        {

            await Task.Run(() =>
            {
                while (!stoppingToken.IsCancellationRequested)
                {
                    stream.RequestStream.WriteAsync(new PulseMessage()
                    {
                        DeviceId = deviceId,
                        Status = ClientStatus.Working,
                        Stamp = Google.Protobuf.WellKnownTypes.Timestamp.FromDateTime(DateTime.UtcNow),
                        Details = "All systems operational"
                    }, stoppingToken);
                    _logger.LogInformation($"Pulse sent from Device: {deviceId} at {DateTime.UtcNow}");
                    Thread.Sleep(2000);
                }
            });
        }

        private async Task SendNumbersStream()
        {
            var stream = _client.GetSum();
            for (int i = 1; i <= 20; i++)
            {
                await stream.RequestStream.WriteAsync(new NumberRequest { Number = i });
                Console.WriteLine($"Sent: {i}");
                _logger.LogInformation($"Sent number: {i}");
                await Task.Delay(500);
            }
            await stream.RequestStream.CompleteAsync();

            var response = await stream.ResponseAsync;

            _logger.LogInformation($"SUM = {response.Sum}");

        }
    }
}
